# GEE_UBM

./: .gitignore  HUC_basins_zonal_stats.ipynb  UBM_output_viewer.ipynb  UBM_runs_workspace.ipynb  UBM_zonal_stats_script.py  UBM_zonal_stats_script_resume_safe.py  UT_Irrigation_Raster_Creation.ipynb  asset_deletion_helper.ipynb  basin_lithology_stats_for_validation.ipynb  creation_of_elevation_based_GeoK_scalar.ipynb  creation_of_lithology_based_soilthickness_scalar.ipynb  data_viewer_app.py  data_viewer_app_long.py  define_and_export_input_collection.py  gNATSGO_machine_learning_gap_filling.ipynb  gNATSGO_machine_learning_gap_filling_updated.ipynb  generate_ubm_inputs.py  preffered_inputs_model_testing.ipynb  pyproject.toml  readme.md  requirements.txt  run_UBM_script.py  run_ubm_complete_workflow.py  snowmelt_testing.ipynb  soil_saturation_vs_SMAP.ipynb  update_snowmelt_and_precip_asset.py  zonal_stats_plotting.ipynb
Cloud_Job_Scripts/: Dockerfile  daily_ubm_orchestrator.py  generate_ubm_inputs_for_update.py  irrigation_forward_fill.py  requirements.txt  snowmelt_and_precip_asset_updater.py  ubm_updater_script.py
GEE_UBM/: InputCollections.py  ModifiedUBM1.py  ModifiedUBM2.py  OriginalUBM.py  SnowMelt.py  __init__.py  helpers.py
Zonal_Stats_Timeseries/GSL_Basin/: GSL_Basin_Terraclimate_Stats_2005_2024.csv  GSL_Basin_Terraclimate_Stats_2016_2024.csv  Modified_UBM_1_UT_RF1kmST_POLARISPor_OLMFC_HHSWP_POLARISKsatM_DAYMETSNODASM_OPENETEEMETRIC_M_m3_Zonal_Stats_GSL_Basin_Watershed.csv
