[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GEE_UBM"
version = "0.1.0"
description = "Utah Soil Water Balance Calculations via Google Earth Engine"
authors = [
    {name = "Mark Radwin", email = "mradwin@utah.gov"},
    {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "earthengine-api",
    "RadGEEToolbox",
    "numpy",
    "pandas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent"
]


[tool.setuptools]
packages = ["GEE_UBM"]

[project.urls]
Homepage = "https://github.com/radwinskis/GEE_UBM"
